# Sunder

./: .gitignore  pyproject.toml  schema.py
src/Sunder/execution/: bootstrapper.py  sandbox.py
src/sunder/: schema.py
src/sunder/client/: app.py  hitl_search.py
src/sunder/execution/: bootstrapper.py  sandbox.py
src/sunder/knowledge/: code_hierarchy.py  context_manager.py  database.py  ingestion.py  retrieval.py
src/sunder/orchestration/: graph.py  orchestrator.py  prompts.py
src/sunder/orchestration/nodes/: adversary_coder.py  baseline_coder.py  evaluator.py  executor.py
tests/: test_e2e_polyglot.py  test_execution_layer.py  test_knowledge_layer.py  test_orchestration_layer.py
