[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sunder"
version = "0.1.0"
description = "Agentic zero-trust sandbox testing."
dependencies = [
    "pydantic>=2.0.0",
    "docker>=7.0.0",
    "textual>=0.50.0",
    "langgraph>=0.0.20",
    "tree-sitter>=0.21.0"
]

[project.scripts]
sunder = "sunder.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/sunder"]