[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sunder"
version = "0.1.0"
description = "Agentic zero-trust sandbox testing."
dependencies = [
    "pydantic==2.13.4",
    "docker==7.1.0",
    "textual==8.2.7",
    "langgraph==1.2.5",
    "tree-sitter==0.25.2",
    "tree-sitter-languages==1.10.2"
]

[project.scripts]
sunder = "sunder.cli:app"

[project.optional-dependencies]
dev = [
    "pytest==8.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/sunder"]